--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: ^2.0.15
   location: ^4.4.0
   intl: ^0.17.0
   google_maps_flutter: ^2.1.8
   geocode: ^1.0.1
   flutter_polyline_points: ^1.0.0
-  provider: ^6.0.3
   path_provider: ^2.0.11
+  sqflite: ^2.0.2+1
 
 dev_dependencies:
   flutter_test:
